# linkedin_chat

./: pyproject.toml  requirements.txt  service_account.json
src/: api.py  main.py  message.py  spreadsheet.py
