[tool.poetry]
name = "linkedin-chat"
version = "0.1.0"
description = ""
authors = ["Dmitry Bleschunov <bleshunov5b@yandex.ru>"]
readme = "README.md"
packages = [{include = "linkedin_chat"}]

[tool.poetry.dependencies]
python = "^3.11"
linkedin-api = {git = "https://github.com/tomquirk/linkedin-api.git"}
streamlit = "^1.23.1"
streamlit-chat = "^0.1.0"
gspread = "^5.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
